Crash on bevel file #55167

Closed
opened 2018-05-23 17:12:53 +02:00 by Dalai Felinto · 7 comments

Blender Version
Broken: 485990e4aa (blender2.8 HEAD)
Worked: 2.79

Short description of error
Crash when opening file.

Exact steps for others to reproduce the error

Open the 2.79 file:

plants_crash.blend

BLI_assert failed: /home/dfelinto/src/blender/blender/source/blender/blenkernel/intern/curve.c:1759, BKE_curve_bevel_make(), at 'cu->bevobj->curve_cache != ((void *)0)'

Full backtrace: P701

**Blender Version** Broken: 485990e4aa (blender2.8 HEAD) Worked: 2.79 **Short description of error** Crash when opening file. **Exact steps for others to reproduce the error** Open the 2.79 file: [plants_crash.blend](https://archive.blender.org/developer/F3441828/plants_crash.blend) `BLI_assert failed: /home/dfelinto/src/blender/blender/source/blender/blenkernel/intern/curve.c:1759, BKE_curve_bevel_make(), at 'cu->bevobj->curve_cache != ((void *)0)'` Full backtrace: [P701](https://archive.blender.org/developer/P701.txt)
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Owner

The problem seems that depsgraph is trying to build a curve object that depends on another object, that is not yet built. So ob->data->bevobj->curve_cache is still NULL.

The problem seems that depsgraph is trying to build a curve object that depends on another object, that is not yet built. So `ob->data->bevobj->curve_cache` is still NULL.
Dalai Felinto self-assigned this 2018-05-23 18:47:43 +02:00
Author
Owner

Added subscriber: @Sergey

Added subscriber: @Sergey
Author
Owner

@Sergey I fixed the relationship order, but I still get a crash when copy-on-write is enabled.

For instance open this super simple file and scale the selected object:

bevels.blend

@Sergey I fixed the relationship order, but I still get a crash when `copy-on-write` is enabled. For instance open this super simple file and scale the selected object: [bevels.blend](https://archive.blender.org/developer/F3442207/bevels.blend)
Dalai Felinto removed their assignment 2018-05-23 20:46:59 +02:00
Sergey Sharybin was assigned by Dalai Felinto 2018-05-23 20:46:59 +02:00
Author
Owner

Assigning to Sergey, have fun.
The remaining issue seems to be that ob_dst->curve_cache is set to NULL on BKE_object_copy_data.

Assigning to Sergey, have fun. The remaining issue seems to be that `ob_dst->curve_cache` is set to NULL on `BKE_object_copy_data`.

This issue was referenced by 70a3b7e70c

This issue was referenced by 70a3b7e70ce145266b37d90f31d3f8e3faf50717
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55167
No description provided.